# openapi

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CHANGES  LICENSE  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pypi.yml  release.yml  tests.yml
docs/: conf.py  index.rst
docs/specs/: openapi.yml
sphinxcontrib/: __init__.py  openapi.py
sphinxcontrib/openapi/: __init__.py  __main__.py  _lib2to3.py  cmdline.py  directive.py  openapi20.py  openapi30.py  openapi31.py  schema_utils.py  utils.py
sphinxcontrib/openapi/renderers/: __init__.py  _httpdomain.py  _httpdomain_old.py  abc.py
tests/: conftest.py  test_openapi.py  test_schema_utils.py  test_spec_examples.py
tests/examples/: .source  README.rst
tests/lib2to3/: conftest.py  test_convert.py  test_convert_operation.py  test_convert_parameter.py  test_convert_parameters.py  test_convert_path.py  test_convert_paths.py  test_convert_request_body.py  test_convert_request_body_formdata.py  test_convert_response.py  test_convert_responses.py
tests/renderers/httpdomain/: conftest.py  test_render.py  test_render_json_schema_description.py  test_render_operation.py  test_render_parameter.py  test_render_parameters.py  test_render_paths.py  test_render_request_body.py  test_render_request_body_example.py  test_render_response.py  test_render_response_content.py  test_render_response_example.py  test_render_responses.py  test_render_restructuredtext_markup.py
tests/renderers/httpdomain/rendered/v2.0/: api-with-examples.yaml.rst  petstore-expanded.yaml.rst  petstore.yaml.rst  (+2 more)
tests/testdata/: foo.json  foo.yaml
tests/testspecs/v2.0/: uber.json  uber.yaml
tests/testspecs/v3.0/: api-with-recursion.yaml
tests/testspecs/v3.1/: issue-112.yaml  issue-147.yml
(+6 files in other folders)
